[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Generator.gd" type="Script" id=1]
[ext_resource path="res://resources/tileset/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/screen.gd" type="Script" id=3]
[ext_resource path="res://resources/tileset/rain_temp.tres" type="TileSet" id=4]
[ext_resource path="res://resources/tileset/tileset.png" type="Texture" id=5]
[ext_resource path="res://scripts/Hemisphere.gd" type="Script" id=6]
[ext_resource path="res://resources/tileset/biomes.tres" type="TileSet" id=7]
[ext_resource path="res://resources/SFX/buttonPress.wav" type="AudioStream" id=8]
[ext_resource path="res://resources/images/menu_background.jpg" type="Texture" id=9]
[ext_resource path="res://resources/fonts/PublicPixel-0W6DP.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://resources/themes/gui_theme.tres" type="Theme" id=11]
[ext_resource path="res://resources/fonts/16_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://resources/SFX/buttonToggle.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="Generator" type="Node2D"]
script = ExtResource( 1 )

[node name="screen" type="Camera2D" parent="."]
position = Vector2( 643, 360 )
current = true
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 4, 4 )
format = 1

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_left = 1.0
margin_right = 183.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="GUI/MarginContainer"]
margin_right = 209.0
margin_bottom = 268.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 202.0
margin_bottom = 261.0

[node name="mapsize" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 31.0

[node name="mapsize" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/mapsize"]
margin_right = 26.0
margin_bottom = 31.0
text = "size
"
align = 1
valign = 1

[node name="persistence" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 195.0
margin_bottom = 51.0

[node name="persistence" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/persistence"]
margin_top = 1.0
margin_right = 121.0
margin_bottom = 15.0
rect_min_size = Vector2( 121, 14 )
text = "Persistence : value"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="persistence_value" type="HSlider" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/persistence"]
margin_left = 125.0
margin_right = 195.0
margin_bottom = 16.0
rect_min_size = Vector2( 70, 0 )
max_value = 1.0
step = 0.05

[node name="octaves" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 195.0
margin_bottom = 71.0

[node name="octave" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/octaves"]
margin_top = 1.0
margin_right = 121.0
margin_bottom = 15.0
rect_min_size = Vector2( 121, 0 )
text = "Octaves : value"

[node name="octave_slider" type="HSlider" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/octaves"]
margin_left = 125.0
margin_right = 195.0
margin_bottom = 16.0
rect_min_size = Vector2( 70, 16 )
min_value = 1.0
max_value = 9.0
value = 1.0

[node name="period" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 195.0
margin_bottom = 99.0

[node name="periodLabel" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/period"]
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
text = "Period : "

[node name="periodSpin" type="SpinBox" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/period"]
margin_left = 57.0
margin_right = 131.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="seed" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 195.0
margin_bottom = 127.0

[node name="seed" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/seed"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Seed :"

[node name="seed_box" type="SpinBox" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/seed"]
margin_left = 43.0
margin_right = 117.0
margin_bottom = 24.0
min_value = 1.0
max_value = 1e+06
value = 1.0

[node name="lacunarity" type="HBoxContainer" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 195.0
margin_bottom = 155.0

[node name="lacunarity" type="Label" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/lacunarity"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Lacunarity:"

[node name="lacunarity_box" type="SpinBox" parent="GUI/MarginContainer/PanelContainer/VBoxContainer/lacunarity"]
margin_left = 73.0
margin_right = 147.0
margin_bottom = 24.0
step = 0.1
value = 2.0

[node name="generateAirMass" type="Button" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 195.0
margin_bottom = 179.0
text = "Generate Air Mass"

[node name="Hemisphere" type="OptionButton" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 195.0
margin_bottom = 203.0
script = ExtResource( 6 )

[node name="generate" type="Button" parent="GUI/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 207.0
margin_right = 195.0
margin_bottom = 227.0
text = "Generate"

[node name="BiomeInfo" type="MarginContainer" parent="GUI"]
margin_left = 2.0
margin_top = 268.0
margin_right = 209.0
margin_bottom = 449.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/BiomeInfo"]
margin_right = 207.0
margin_bottom = 181.0

[node name="position" type="Label" parent="GUI/BiomeInfo/VBoxContainer"]
margin_right = 207.0
margin_bottom = 14.0
text = "(X,Y)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="type" type="Label" parent="GUI/BiomeInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 207.0
margin_bottom = 32.0
text = "value"

[node name="temp" type="Label" parent="GUI/BiomeInfo/VBoxContainer"]
margin_top = 36.0
margin_right = 207.0
margin_bottom = 50.0
text = "Temperature : value"

[node name="rain" type="Label" parent="GUI/BiomeInfo/VBoxContainer"]
margin_top = 54.0
margin_right = 207.0
margin_bottom = 68.0
text = "rain : value"

[node name="height" type="Label" parent="GUI/BiomeInfo/VBoxContainer"]
margin_top = 72.0
margin_right = 207.0
margin_bottom = 86.0
text = "average height : value"

[node name="saveLoad" type="MarginContainer" parent="GUI"]
margin_left = 3.0
margin_top = 358.0
margin_right = 232.0
margin_bottom = 463.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/saveLoad"]
margin_right = 229.0
margin_bottom = 105.0

[node name="save" type="Button" parent="GUI/saveLoad/VBoxContainer"]
margin_right = 229.0
margin_bottom = 20.0
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/saveLoad/VBoxContainer"]
margin_top = 24.0
margin_right = 229.0
margin_bottom = 44.0

[node name="load" type="Button" parent="GUI/saveLoad/VBoxContainer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 20.0
text = "load"

[node name="worlds" type="OptionButton" parent="GUI/saveLoad/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 72.0
margin_bottom = 20.0

[node name="rainMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 4, 4 )
format = 1

[node name="TemperatureMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 4, 4 )
format = 1

[node name="LineTexture" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="airMass" type="Line2D" parent="."]
points = PoolVector2Array( 100, -37 )
width = 4.0
default_color = Color( 0.992157, 0.992157, 0.992157, 1 )

[node name="biomeMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="buttonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="background" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_right = 1283.0
margin_bottom = 725.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="HUD"]
margin_left = 904.0
margin_top = -1.0
margin_right = 1283.0
margin_bottom = 403.0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="MarginContainer" parent="HUD/UI"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 310.0
margin_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/UI/buttons"]
margin_right = 376.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="HUD/UI/buttons/VBoxContainer"]
margin_right = 376.0
margin_bottom = 24.0
theme = ExtResource( 11 )
text = "Map size"
align = 1

[node name="SizeButtons" type="HBoxContainer" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 28.0
margin_right = 376.0
margin_bottom = 52.0
alignment = 1

[node name="Small" type="Button" parent="HUD/UI/buttons/VBoxContainer/SizeButtons"]
margin_left = 41.0
margin_right = 131.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 24 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "small"

[node name="Medium" type="Button" parent="HUD/UI/buttons/VBoxContainer/SizeButtons"]
margin_left = 135.0
margin_right = 241.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Medium"

[node name="Large" type="Button" parent="HUD/UI/buttons/VBoxContainer/SizeButtons"]
margin_left = 245.0
margin_right = 335.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 24 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Large"

[node name="Label2" type="Label" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 56.0
margin_right = 376.0
margin_bottom = 80.0
text = "Coastline"
align = 1

[node name="coastButtons" type="HBoxContainer" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 84.0
margin_right = 376.0
margin_bottom = 108.0
alignment = 1

[node name="Jagged" type="Button" parent="HUD/UI/buttons/VBoxContainer/coastButtons"]
margin_left = 25.0
margin_right = 131.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "jagged"

[node name="Normal" type="Button" parent="HUD/UI/buttons/VBoxContainer/coastButtons"]
margin_left = 135.0
margin_right = 241.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Normal"

[node name="Smooth" type="Button" parent="HUD/UI/buttons/VBoxContainer/coastButtons"]
margin_left = 245.0
margin_right = 351.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Smooth"

[node name="Label3" type="Label" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 112.0
margin_right = 376.0
margin_bottom = 136.0
text = "Landmass Size"
align = 1

[node name="landButtons" type="HBoxContainer" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 140.0
margin_right = 376.0
margin_bottom = 164.0
alignment = 1

[node name="Archipelago" type="Button" parent="HUD/UI/buttons/VBoxContainer/landButtons"]
margin_right = 186.0
margin_bottom = 24.0
rect_min_size = Vector2( 186, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Archipelago"

[node name="Continental" type="Button" parent="HUD/UI/buttons/VBoxContainer/landButtons"]
margin_left = 190.0
margin_right = 376.0
margin_bottom = 24.0
rect_min_size = Vector2( 186, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Continental"

[node name="Label4" type="Label" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 168.0
margin_right = 376.0
margin_bottom = 192.0
text = "Mountain Height"
align = 1

[node name="heightButtons" type="HBoxContainer" parent="HUD/UI/buttons/VBoxContainer"]
margin_top = 196.0
margin_right = 376.0
margin_bottom = 220.0
alignment = 1

[node name="Flatter" type="Button" parent="HUD/UI/buttons/VBoxContainer/heightButtons"]
margin_left = 25.0
margin_right = 147.0
margin_bottom = 24.0
rect_min_size = Vector2( 122, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Flatter"

[node name="Average" type="Button" parent="HUD/UI/buttons/VBoxContainer/heightButtons"]
margin_left = 151.0
margin_right = 257.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Normal"

[node name="Peaks" type="Button" parent="HUD/UI/buttons/VBoxContainer/heightButtons"]
margin_left = 261.0
margin_right = 351.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 24 )
custom_fonts/font = ExtResource( 12 )
toggle_mode = true
text = "Peaks"

[node name="buttonToggle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="value_changed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/persistence/persistence_value" to="." method="_on_persistence_value_value_changed"]
[connection signal="value_changed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/octaves/octave_slider" to="." method="_on_octave_slider_value_changed"]
[connection signal="value_changed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/period/periodSpin" to="." method="_on_periodSpin_value_changed"]
[connection signal="value_changed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/seed/seed_box" to="." method="_on_seed_box_value_changed"]
[connection signal="value_changed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/lacunarity/lacunarity_box" to="." method="_on_lacunarity_box_value_changed"]
[connection signal="pressed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/generateAirMass" to="." method="_on_generateAirMass_pressed"]
[connection signal="item_selected" from="GUI/MarginContainer/PanelContainer/VBoxContainer/Hemisphere" to="." method="_on_Hemisphere_item_selected"]
[connection signal="pressed" from="GUI/MarginContainer/PanelContainer/VBoxContainer/generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="GUI/saveLoad/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="GUI/saveLoad/VBoxContainer/HBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="item_selected" from="GUI/saveLoad/VBoxContainer/HBoxContainer/worlds" to="." method="_on_worlds_item_selected"]
[connection signal="pressed" from="GUI/saveLoad/VBoxContainer/HBoxContainer/worlds" to="." method="_on_worlds_pressed"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/SizeButtons/Small" to="." method="_on_Small_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/SizeButtons/Medium" to="." method="_on_Medium_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/SizeButtons/Large" to="." method="_on_Large_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/coastButtons/Jagged" to="." method="_on_Jagged_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/coastButtons/Normal" to="." method="_on_Normal_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/coastButtons/Smooth" to="." method="_on_Smooth_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/landButtons/Archipelago" to="." method="_on_Archipelago_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/landButtons/Continental" to="." method="_on_Continental_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/heightButtons/Flatter" to="." method="_on_Flatter_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/heightButtons/Average" to="." method="_on_Average_toggled"]
[connection signal="toggled" from="HUD/UI/buttons/VBoxContainer/heightButtons/Peaks" to="." method="_on_Peaks_toggled"]
